Replace getFirst() by get(0)